# alekseyevich180.github.io

./: 404.html  DFT.html  api-examples.html  hashmap.json  index.html  markdown-examples.html
DFT/: cdd.html  dos.html  index.html  lobster.html
MD/: ReaxFF.html  eam.html  index.html  terosff.html  tersoff.html
ML/: ML_for_crystalstructure.html  ML_for_potential.html  index.html
Publications/: index.html
alekseyevich-firstprinciple/: README.md  package-lock.json  package.json  pyproject.toml
alekseyevich-firstprinciple/my-web/: index.md
alekseyevich-firstprinciple/my-web/.vitepress/: config.ts
alekseyevich-firstprinciple/my-web/DFT/: index.md
alekseyevich-firstprinciple/my-web/MD/: index.md
alekseyevich-firstprinciple/my-web/ML/: index.md
alekseyevich-firstprinciple/src/alekseyevich_firstprinciple/: __init__.py
assets/: DFT_cdd.md.wwMeaOYJ.lean.js  DFT_dos.md.Yi9w5qmI.js  DFT_index.md.AEsl0LKp.js  DFT_lobster.md.ClpVErh0.js  MD_ReaxFF.md.BPo81KxS.js  MD_ReaxFF.md.CGxMIMTY.lean.js  MD_eam.md.BBC06jRp.lean.js  MD_eam.md.CtAA__gA.js  MD_index.md.CJqP7tVQ.js  MD_terosff.md.DiSwPtYC.js  MD_tersoff.md.CiEPWY0w.js  MD_tersoff.md.CpGCCPId.lean.js  ML_ML_for_crystalstructure.md.DqHlh4dc.lean.js  ML_ML_for_potential.md.DU4_LYnX.js  ML_index.md.CkVCF9Ky.js  ML_ml_for_crystalstructure.md.Bq98lEbs.lean.js  ML_ml_for_potential.md.xnM28MQP.lean.js  Publications_index.md.Bz5BxZYq.js  index.md.DUYKAxCx.lean.js  index.md.DvwWDCvn.lean.js
