[project]
name = "alekseyevich-firstprinciple"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "wu", email = "alekseyevich180@gmail.com" }
]
dependencies = ["requests~=2.32.3", "pandas~=2.2.3"]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
[tool.hatch.metadata]
allow-direct-references = true
